# AksaraLLM

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: aksara_1b_smoke.json  aksara_20b_dense.json  aksara_2b_dense.json  aksara_4b_dense.json  aksara_7b_dense.json
docs/: aksara_20b_blueprint.md  aksara_20b_execution_plan.md  quickstart.md  release_standard.md
evaluation/: auto_eval.py  benchmark.py
scripts/: build_pretrain_corpus_v2.py  build_pretrain_data.py  build_unified_datasets.py  convert_gguf.sh  data_auditor.py  data_autopilot.py  demo_gradio.py  deploy_tpu.sh  export_gguf.py  generate_sft_data.py  generate_sigap_simulation_dataset.py  postprocess_corpus_dedup.py  preflight_20b.py  release_check.py  run_1b_training.sh  run_smoke_test.sh  tokenize_pretrain_corpus.py  train_20b_pretrain.py  train_distributed.py  train_rlhf_ppo.py  train_sft_dpo.py  train_tokenizer_20b.py  upload_unified_datasets_to_hf.py
src/aksarallm/: __init__.py  config.py  inference.py  model.py  tokenizer_utils.py  webui.py
tests/: test_public_surface.py
